# tclf

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  Agents.md  CHANGELOG.md  CITATION.cff  README.md  README.rst  appveyor.yml  better-df-support.md  bump-version.sh  index.html  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  sonar-project.properties  zensical.toml
.circleci/: config.yml
.claude/: settings.json
.github/: .dependabot.yaml  CODEOWNERS  dependabot.yaml  release.yml
.github/workflows/: autoupdate.yaml  docs.yaml  publish.yaml  tests.yaml
doc/: api.rst  conf.py  index.rst  quick_start.rst
docs/: bibliography.bib  faq.md  index.md  naming_conventions.md  nan_handling.md  option_trade_classification.md  reference.md  rules.md
docs/overrides/partials/integrations/analytics/: umami.html
examples/: plot_classifier.py  plot_template.py  plot_transformer.py
faq/: index.html
naming_conventions/: index.html
nan_handling/: index.html
notebooks/: gsu.ipynb
option_trade_classification/: index.html
overrides/partials/: comments.html
reference/: index.html
rules/: index.html
search/: search_index.json
skltemplate/: _template.py
src/tclf/: classical_classifier.py  types.py
tclf/: _template.py
tclf/tests/: test_common.py  test_template.py
tests/: templates.py  test_classical_classifier.py
