[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tclf"]

[project]
name = "otc"
authors = [
  { name="Markus Bilz", email="github@markusbilz.com" },
]
description = "Code to perform option trade classification using machine learning."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Framework :: Jupyter",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn"
]


dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/KarelZe/thesis"
"Bug Tracker" = "https://github.com/KarelZe/thesis/issues"

[tool.autoflake]
recursive = true
in-place = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.isort]
profile = "black"

[tool.mypy]
# https://github.com/python/mypy/issues/2410
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true

[project.optional-dependencies]
dev=[
    "build",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]


[tool.pylint.TYPECHECK]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members=["numpy.*", "torch.*"]

[tool.pytest.ini_options]
minversion = 7.0
addopts = "-ra -p no:warnings -v --cov --cov-report term-missing --doctest-modules"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "debug_*.py",
    "tclf/tests/*",
]
branch = true
source = ["tclf"]
include = ["*/tclf/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if self.verbose:"
    ]
show_missing = true
